--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "heroku": "^7.62.0",
     "mongoose": "^6.5.3"
   },
   "devDependencies": {
